# programming-skills

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  benchmarks.json  index.html
ci/: config.yaml  (+19 more)
tests/: .gitignore  ARCHITECTURE.md  README.md  config.yaml  debug_output.txt  debug_test_loading.py  evaluator.py  pyproject.toml
tests/adapters/: __init__.py  codex.py  copilot.py  filesystem.py  gemini.py  ollama.py
tests/data-history/: summary-codex-gpt-5.1-codex-mini-20260207-181813.json  summary-copilot-claude-haiku-4.5-20260207-231842.json  summary-copilot-claude-haiku-4.5-20260207-232853.json  summary-copilot-claude-haiku-4.5-20260207-235150.json  summary-ollama-rnj-1-8b-20260207-214616.json  summary-ollama-rnj-1-8b-20260207-225527.json  summary-ollama-rnj-1-8b-20260207-230111.json  summary-ollama-rnj-1-8b-20260207-230848.json
tests/data-history/ps-composition-over-coordination/: claude-haiku-4.5-20260207-235150.json  gpt-5.1-codex-mini-20260207-145225.json  gpt-5.1-codex-mini-20260207-181813.json  gpt-5.2-codex-20260207-163206.json  rnj-1-8b-20260207-214616.json  rnj-1-8b-20260207-220032.json  rnj-1-8b-20260207-225527.json
tests/data-history/ps-error-handling-design/: claude-haiku-4.5-20260207-231842.json  (+9 more)
tests/domain/: __init__.py  judging.py  logic.py  skill_extraction.py  types.py
tests/ports/: __init__.py  filesystem.py  model.py
tests/results/: codex-gpt-5.1-codex-mini-20260207-145225.json  codex-gpt-5.2-codex-20260207-163206.json
tests/services/: __init__.py  evaluation.py  reporting.py  skill_discovery.py  test_generation.py
(+148 files in other folders)
