[project]
name = "skills-benchmarks"
version = "0.1.0"
description = "Benchmarks for programming skills using upskill"
requires-python = ">=3.11"
dependencies = [
    "upskill>=0.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
python-downloads = "automatic"
